Fix incremental reflow bugs by being consistent about max-element-width for percentage widths whether or not the reflow is an unconstrained width (as initial always is when we care about max-element-width) or constrained width (as some incremental reflows are).  b=215857  r=bernd  sr=bzbarsky  a=brendan